--- a/scss/style.css
+++ b/scss/style.css
@@ -60,4 +60,93 @@ a {
   color: white;
   text-decoration: none;
 }
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container-title {
+  font-size: 1.25rem;
+}
+
+.container-info {
+  font-size: 0.75rem;
+}
+
+.container-result {
+  font-size: 1.5rem;
+}
+
+.container-header {
+  width: 100%;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-header :nth-child(2) {
+  color: #777777;
+}
+
+.container-header-item {
+  padding: 0.25em;
+}
+
+.container-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 1em;
+  width: 100%;
+}
+
+.container-list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 250px;
+  height: 150px;
+  margin: 0.5em;
+  background-color: #777777;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.container-list-item p {
+  padding: 0.5em;
+}
+
+.container-list-active {
+  border: solid white 2px;
+}
 /*# sourceMappingURL=style.css.map */
