--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,3 +33,68 @@ a {
     color: white;
     text-decoration: none;
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+
+    &-title {
+        font-size: $font-md;
+    }
+
+    &-info {
+        font-size: $font-sm;
+    }
+
+    &-result {
+        font-size: $font-lg;
+    }
+
+    &-header {
+        width: 100%;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        :nth-child(2){
+            color: $background2;
+        }
+
+        &-item {
+            padding: 0.25em;
+        }
+
+        &-input {
+
+        }
+    }
+
+    &-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 1em;
+        width: 100%;
+
+        &-item {
+            display: flex;
+            flex-direction: column;
+            width: 250px;
+            height: 150px;
+            margin: 0.5em;
+            background-color: $background2;
+            align-items: center;
+            justify-content: space-around;
+
+            p {
+                padding: 0.5em;
+            }
+        }
+
+        &-active{
+            border: solid white 2px;
+        }
+    }
+}
