--- a/scss/style.css
+++ b/scss/style.css
@@ -85,7 +85,7 @@ a {
 
 .container-header {
   width: 100%;
-  height: 100px;
+  height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,7 +106,43 @@ a {
 }
 
 .container-header-item {
-  padding: 0.25em;
+  margin: 0.25em;
+}
+
+.container-header-input {
+  text-align: center;
+  font-size: 1.25rem;
+  background-color: #a5a5a5;
+  border: solid #777777 2px;
+  border-radius: 5px;
+  width: 300px;
+  color: rgba(255, 255, 255, 0.808);
+  outline: none;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.container-header-input:focus {
+  background-color: #777777;
+  color: white;
+  border: solid white 2px;
+}
+
+.container-header-button {
+  font-size: 1.25rem;
+  width: 300px;
+  border: solid #777777 2px;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 0.808);
+  background-color: #777777;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.container-header-button:hover {
+  color: white;
+  border: solid white 2px;
 }
 
 .container-list {
@@ -132,21 +168,40 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 250px;
-  height: 150px;
+  height: 100px;
   margin: 0.5em;
   background-color: #777777;
+  border: solid #777777 2px;
+  border-radius: 5px;
+  color: #a5a5a5;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
 .container-list-item p {
   padding: 0.5em;
 }
 
-.container-list-active {
+.container-list-item:hover {
+  color: rgba(255, 255, 255, 0.808);
+  border: solid rgba(255, 255, 255, 0.808) 2px;
+}
+
+.container-list-item-active {
+  border: solid white 2px;
+  color: white;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.container-list-item-active:hover {
+  color: white;
   border: solid white 2px;
 }
 /*# sourceMappingURL=style.css.map */
