--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 // COLOURS
 $background: rgb(165, 165, 165);
 $background2: rgb(119, 119, 119);
+$almostwhite: rgba(255, 255, 255, 0.808);
+$white: white;
 $content: red;
 $active: black;
 
@@ -13,9 +15,6 @@ $font-lg: 1.5rem;
 @import "header";
 @import "footer";
 
-
-
-
 *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
@@ -26,11 +25,11 @@ $font-lg: 1.5rem;
 
 body {
     background-color: $background;
-    color: white;
+    color: $white;
 }
 
 a {
-    color: white;
+    color: $white;
     text-decoration: none;
 }
 
@@ -52,7 +51,7 @@ a {
 
     &-header {
         width: 100%;
-        height: 100px;
+        height: 200px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -63,11 +62,41 @@ a {
         }
 
         &-item {
-            padding: 0.25em;
+            margin: 0.25em;
         }
 
         &-input {
+            text-align: center;
+            font-size: $font-md;
+            background-color: $background;
+            border: solid $background2 2px;
+            border-radius: 5px;
+            width: 300px;
+            color: $almostwhite;
+            outline: none;
 
+            transition: all 0.2s ease-out;
+            &:focus{
+                background-color: $background2;
+                color: $white;
+                border: solid $white 2px
+            }
+        }
+
+        &-button {
+            font-size: $font-md;
+            width: 300px;
+            border: solid $background2 2px;
+            border-radius: 5px;
+            color: $almostwhite;
+            background-color: $background2;
+            cursor: pointer;
+
+            transition: all 0.2s ease-out;
+            &:hover {
+                color: $white;
+                border: solid $white 2px;
+            }
         }
     }
 
@@ -82,19 +111,36 @@ a {
             display: flex;
             flex-direction: column;
             width: 250px;
-            height: 150px;
+            height: 100px;
             margin: 0.5em;
             background-color: $background2;
+            border: solid $background2 2px;
+            border-radius: 5px;
+            color: $background;
             align-items: center;
             justify-content: space-around;
+            cursor: pointer;
 
             p {
                 padding: 0.5em;
             }
-        }
 
-        &-active{
-            border: solid white 2px;
+            transition: all 0.2s ease-out;
+            &:hover {
+                color: $almostwhite;
+                border: solid $almostwhite 2px;
+            }
+
+            &-active{
+                border: solid $white 2px;
+                color: $white;
+
+                transition: all 0.2s ease-out;
+                &:hover {
+                    color: $white;
+                    border: solid $white 2px;
+                }
+            }
         }
     }
 }
