--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     padding: 1rem 2rem;
     background-color: $background2;
+    border-bottom: solid 1px $background;
 
     &-item {
         padding: 0 1rem;
